додав шрифти, додав в блоки актуального тексту, вивів в інтро фотки, зробив блок де гості можуть залишити статус будуть вони разом чи ні

--- a/client/react-app/styles/_variables.scss
+++ b/client/react-app/styles/_variables.scss
@@ -1,13 +1,16 @@
 // Fonts
-$fRegular: Poppins-Regular, sans-serif;
-$fBold: Poppins-Bold, sans-serif;
+$fRegular: CarloMelowSans, sans-serif;
+$fBold: CarloMelowSans, sans-serif;
 
 // Colors
 $primary-color: #3498db;
 $secondary-color: #2ecc71;
+$cOrange: #e74c3c;
+$cWhite: white;
 
 // Header colors
 $header-bg-color: #ffffff;
+$bg-color-pink: #fa67ff84;
 $header-text-color: #d35400;
 
 // Plain text colors
