--- a/client/react-app/styles/sections/HeroSection.scss
+++ b/client/react-app/styles/sections/HeroSection.scss
@@ -3,17 +3,38 @@
 .heroSection {
 	position: relative;
 	width: 100%;
-	background: url("/images/hero_bg.jpg") center center / cover no-repeat;
+	background: url("/static/img/hero_bg.jpg") center center / cover no-repeat;
 	overflow: hidden; /* Ensures falling hearts are clipped within hero section */
 
 	.heroContent {
+		height: 100vh;
 		position: relative;
 		z-index: 10; /* Content above falling hearts */
 		max-width: 1200px;
 		margin: 0 auto;
 		padding: 4rem 2rem;
 		text-align: center;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
 
+		@media (max-width: 767px) {
+			padding: 2rem 1rem;
+
+			h1 {
+				font-size: 2rem;
+			}
+
+			p {
+				font-size: 1rem;
+			}
+
+			.imagesWrapper {
+				flex-direction: column;
+				gap: 1rem;
+			}
+		}
 		h1 {
 			font-size: 3rem;
 			line-height: 1.2;
@@ -34,9 +55,12 @@
 
 			.childPhoto {
 				position: relative;
-				width: 150px; /* Matches next/image widths */
-				height: 200px;
+				height: 400px; /* Matches next/image widths */
+				width: auto;
 			}
+		}
+		.city {
+			font-size: 2em;
 		}
 	}
 
@@ -57,7 +81,7 @@
 			top: -10%; /* Start slightly above hero section */
 			width: 30px;
 			height: 30px;
-			background: url("/img/heart.svg") center / contain no-repeat;
+			background: url(../../img/heart.svg) center / contain no-repeat;
 			animation: fall 8s linear infinite;
 			opacity: 0.8;
 
@@ -98,22 +122,4 @@
 	/****************************
      * MEDIA QUERIES - Mobile
      ****************************/
-	@media (max-width: 767px) {
-		.heroContent {
-			padding: 2rem 1rem;
-
-			h1 {
-				font-size: 2rem;
-			}
-
-			p {
-				font-size: 1rem;
-			}
-
-			.imagesWrapper {
-				flex-direction: column;
-				gap: 1rem;
-			}
-		}
-	}
 }
