додав логіку для адмінки зі стилями, для додавання гостей, генерації урла, підсумку по алкоголю і виведення його в таблиці, в херо сексшн виводиться в залежності від статі або пари, правильні слова

--- a/client/react-app/styles/main.scss
+++ b/client/react-app/styles/main.scss
@@ -27,3 +27,5 @@ h6 {
 @import "./sections/ChatBlock.scss";
 @import "./sections/CoupleBlock.scss";
 @import "./sections/InvitationFooter.scss";
+
+@import "./sections/Admin.scss";
