--- a/client/react-app/styles/styles.css
+++ b/client/react-app/styles/styles.css
@@ -1,52 +1,57 @@
 body {
-    font-family: 'Poppins-Regular', sans-serif;
-    overflow-x: hidden;
-    margin: 0;
-    padding: 0;
-    scroll-behavior: smooth;
-    background-color: white;
+	overflow-x: hidden;
+	margin: 0;
+	padding: 0;
+	scroll-behavior: smooth;
+	background-color: white;
 }
 
 .no_scroll {
-    overflow: hidden;
-    margin-right: 16px;
+	overflow: hidden;
+	margin-right: 16px;
 }
 
 @media (max-width: 500px) {
-    .no_scroll {
-        margin-right: 0px;
-    }
+	.no_scroll {
+		margin-right: 0px;
+	}
 }
 
 html {
-    scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 
 body::-webkit-scrollbar {
-    width: 16px;
+	width: 16px;
 }
 
 body::-webkit-scrollbar-track {
-    background: #F7F3F4;
-    background: #F7F3F4;
+	background: #f7f3f4;
+	background: #f7f3f4;
 }
 
 body::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    width: 16px;
-    border-radius: 10px;
-    background: -webkit-gradient(linear, left top, left bottom, from(#f2726c), to(#7675FD));
-    background: linear-gradient(180deg, #f2726c, #7675FD);
+	border-radius: 10px;
+	width: 16px;
+	border-radius: 10px;
+	background: -webkit-gradient(
+		linear,
+		left top,
+		left bottom,
+		from(#f2726c),
+		to(#7675fd)
+	);
+	background: linear-gradient(180deg, #f2726c, #7675fd);
 }
 
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 a {
-    text-decoration: none;
-    color: black;
-    cursor: pointer;
+	text-decoration: none;
+	color: black;
+	cursor: pointer;
 }
 
 p,
@@ -58,118 +63,122 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 button {
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
+	border: none;
+	background-color: transparent;
+	cursor: pointer;
 }
 
 input:focus-visible {
-    outline: 1px solid transparent;
+	outline: 1px solid transparent;
 }
 
 input:hover {
-    outline: 1px solid transparent;
-    border: 1px solid transparent;
-    border-color: transparent;
+	outline: 1px solid transparent;
+	border: 1px solid transparent;
+	border-color: transparent;
 }
 
 /*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
 html.has-scroll-smooth {
-    overflow: hidden;
-    background-color: white;
+	overflow: hidden;
+	background-color: white;
 }
 
 html.has-scroll-dragging {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 .has-scroll-smooth body {
-    overflow: hidden;
-    background-color: white;
-
+	overflow: hidden;
+	background-color: white;
 }
 
 .has-scroll-smooth [data-scroll-container] {
-    min-height: 100vh;
-    background-color: white;
-
+	min-height: 100vh;
+	background-color: white;
 }
 
 [data-scroll-direction="horizontal"] [data-scroll-container] {
-    height: 100vh;
-    display: inline-block;
-    white-space: nowrap;
+	height: 100vh;
+	display: inline-block;
+	white-space: nowrap;
 }
 
 [data-scroll-direction="horizontal"] [data-scroll-section] {
-    display: inline-block;
-    vertical-align: top;
-    white-space: nowrap;
-    height: 100%;
+	display: inline-block;
+	vertical-align: top;
+	white-space: nowrap;
+	height: 100%;
 }
 
 .c-scrollbar {
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 16px;
-    height: 100%;
-    transform-origin: center right;
-    transition: transform 0.3s, opacity 0.3s;
-    opacity: 0;
-    z-index: 1000;
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 16px;
+	height: 100%;
+	transform-origin: center right;
+	transition: transform 0.3s, opacity 0.3s;
+	opacity: 0;
+	z-index: 1000;
 }
 
 .c-scrollbar:hover {
-    transform: scaleX(1.45);
+	transform: scaleX(1.45);
 }
 
 .c-scrollbar:hover,
 .has-scroll-scrolling .c-scrollbar,
 .has-scroll-dragging .c-scrollbar {
-    opacity: 1;
+	opacity: 1;
 }
 
 [data-scroll-direction="horizontal"] .c-scrollbar {
-    width: 100%;
-    height: 10px;
-    top: auto;
-    bottom: 0;
-    transform: scaleY(1);
-    background-color: white;
-    z-index: 1200;
+	width: 100%;
+	height: 10px;
+	top: auto;
+	bottom: 0;
+	transform: scaleY(1);
+	background-color: white;
+	z-index: 1200;
 }
 
 [data-scroll-direction="horizontal"] .c-scrollbar:hover {
-    transform: scaleY(1.3);
+	transform: scaleY(1.3);
 }
 
 .c-scrollbar_thumb {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 16px;
-    cursor: -webkit-grab;
-    cursor: grab;
-    border-radius: 10px;
-    background: -webkit-gradient(linear, left top, left bottom, from(#f2726c), to(#7675FD));
-    background: linear-gradient(180deg, #f2726c, #7675FD);
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 16px;
+	cursor: -webkit-grab;
+	cursor: grab;
+	border-radius: 10px;
+	background: -webkit-gradient(
+		linear,
+		left top,
+		left bottom,
+		from(#f2726c),
+		to(#7675fd)
+	);
+	background: linear-gradient(180deg, #f2726c, #7675fd);
 }
 
 .has-scroll-dragging .c-scrollbar_thumb {
-    cursor: -webkit-grabbing;
-    cursor: grabbing;
+	cursor: -webkit-grabbing;
+	cursor: grabbing;
 }
 
 [data-scroll-direction="horizontal"] .c-scrollbar_thumb {
-    right: auto;
-    bottom: 0;
+	right: auto;
+	bottom: 0;
 }
