--- a/client/react-app/styles/sections/Admin.scss
+++ b/client/react-app/styles/sections/Admin.scss
@@ -46,5 +46,64 @@
 		td {
 			padding: 15px;
 		}
+		.table_button_row {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: row;
+			gap: 10px;
+		}
+	}
+
+	.modal {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100vw;
+		height: 100vh;
+		background: rgba(0, 0, 0, 0.3);
+		bottom: 0;
+		right: 0;
+		max-height: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: row;
+		.modal-content {
+			background-color: white;
+			width: 40vw;
+			padding: 2rem;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			border-radius: 10px;
+			h4 {
+				margin-bottom: 10px;
+			}
+			p {
+				font-size: 1.2em;
+			}
+			.modal-footer {
+				background-color: transparent;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				flex-direction: row;
+				margin-top: 10px;
+				button {
+					font-size: 1.2em;
+				}
+			}
+		}
+	}
+	.modal_edit {
+		.modal-content {
+			width: 50vw;
+			.row {
+				margin-left: 0;
+				margin-right: 0;
+				width: 100%;
+			}
+		}
 	}
 }
