додав логіки для відправки нотіфі, в адмінці додав логаут, медіа квері для адмінки

--- a/client/react-app/styles/main.scss
+++ b/client/react-app/styles/main.scss
@@ -17,6 +17,26 @@ h5,
 h6 {
 	font-family: $fRegular;
 }
+
+button {
+	background-color: #f3ebe6;
+	border: 1px solid $border-color;
+	padding: 10px 15px;
+	cursor: pointer;
+	font-size: 16px;
+	border-radius: 8px;
+	transition: $mainTransition;
+
+	&:hover {
+		background-color: $secondary-color;
+		color: $cWhite;
+	}
+
+	&.selected {
+		background-color: $primary-color;
+		color: $cWhite;
+	}
+}
 @import "./common/header.scss";
 /* Each block’s SCSS */
 @import "./sections/HeroSection.scss";
