--- a/client/react-app/styles/sections/Admin.scss
+++ b/client/react-app/styles/sections/Admin.scss
@@ -1,6 +1,8 @@
 .admin_container {
-	@media only screen and (min-width: 993px) {
-		width: 90%;
+	width: 90%;
+
+	@media screen and (max-width: 1200px) {
+		width: 96%;
 	}
 
 	h1 {
@@ -9,6 +11,7 @@
 	}
 	h2 {
 		font-size: 2em;
+		margin-bottom: 5px;
 	}
 
 	a {
@@ -20,7 +23,32 @@
 			color: rgb(0, 0, 77);
 		}
 	}
+	.responsive-table {
+		tbody {
+			&::-webkit-scrollbar {
+				height: 16px;
+			}
 
+			&::-webkit-scrollbar-track {
+				background: #f7f3f4;
+				background: #f7f3f4;
+			}
+
+			&::-webkit-scrollbar-thumb {
+				border-radius: 10px;
+				height: 16px;
+				border-radius: 10px;
+				background: -webkit-gradient(
+					linear,
+					left top,
+					left bottom,
+					from(#f2726c),
+					to(#7675fd)
+				);
+				background: linear-gradient(180deg, #f2726c, #7675fd);
+			}
+		}
+	}
 	.admin_container_form {
 		background-color: $bg-color-pink;
 		border-radius: 10px;
@@ -41,10 +69,61 @@
 				color: black;
 			}
 		}
+		.center_checkbox_container {
+			margin-top: 2rem;
+			label {
+				padding-left: 5.5vw;
+			}
+		}
+		.right_select_container {
+			margin-top: 29px;
+			margin-bottom: 0;
+		}
 	}
 	.responsive-table {
+		th,
+		td {
+			text-align: center;
+			@media screen and (max-width: 576px) {
+				font-size: 0.8em;
+			}
+		}
+		th {
+			@media screen and (max-width: 576px) {
+				padding: 11px 0px;
+			}
+		}
+		tbody {
+			tr {
+				transition: all 0.3s ease-in-out;
+				&:hover {
+					background-color: $bg-color-pink;
+				}
+				@media screen and (max-width: 576px) {
+					padding: 0;
+				}
+			}
+		}
 		td {
 			padding: 15px;
+
+			i {
+				font-weight: bold;
+				font-style: normal;
+			}
+			@media screen and (max-width: 1400px) {
+				font-size: 0.9em;
+				padding: 10px;
+			}
+			@media screen and (max-width: 1100px) {
+				padding: 5px;
+			}
+			@media screen and (max-width: 992px) {
+				padding: 16px;
+			}
+			@media screen and (max-width: 576px) {
+				padding: 10px;
+			}
 		}
 		.table_button_row {
 			display: flex;
@@ -52,6 +131,23 @@
 			align-items: center;
 			flex-direction: row;
 			gap: 10px;
+			height: 100%;
+			@media screen and (max-width: 992px) {
+				flex-direction: column;
+			}
+
+			.btn {
+				margin-left: 0 !important;
+				@media screen and (max-width: 1400px) {
+					font-size: 0.8em;
+					line-height: 100%;
+					height: 27px;
+					padding: 0 12px;
+				}
+				@media screen and (max-width: 992px) {
+					width: 100%;
+				}
+			}
 		}
 	}
 
