добавив медіа квері для адмінки, телеграм нотіфі скоріш за все відправляє всім користувачам нотіфі, додав стилів для херо секшн

--- a/client/react-app/styles/_variables.scss
+++ b/client/react-app/styles/_variables.scss
@@ -3,22 +3,22 @@ $fRegular: CarloMelowSans, sans-serif;
 $fBold: CarloMelowSans, sans-serif;
 
 // Colors
-$primary-color: #3498db;
-$secondary-color: #2ecc71;
+$primary-color: #3a865b;
+$pink-color: #ff9aff;
 $cOrange: #e74c3c;
 $cWhite: white;
 
 // Header colors
 $header-bg-color: #ffffff;
-$bg-color-pink: #fa67ff84;
-$header-text-color: #d35400;
+$bg-color-pink: #ff9aff;
+$header-text-color: #ff9aff;
 
 // Plain text colors
 $plain-text-color: #444444;
 $plain-text-secondary-color: #7f8c8d;
 
 // Button colors
-$button-bg-color: #e74c3c;
+$button-bg-color: #3a865b;
 $button-text-color: #ffffff;
 
 // Additional colors (if needed)
