--- a/client/react-app/styles/sections/HeroSection.scss
+++ b/client/react-app/styles/sections/HeroSection.scss
@@ -1,73 +1,83 @@
 /* File: styles/main.scss (or a separate HeroSection.module.scss) */
 
-.heroSection {
+.hero_section {
 	position: relative;
 	width: 100%;
 	background: url("/static/img/hero_bg.jpg") center center / cover no-repeat;
 	overflow: hidden; /* Ensures falling hearts are clipped within hero section */
+	color: $primary-color;
 
-	.heroContent {
+	.hero_content {
 		height: 100vh;
 		position: relative;
 		z-index: 10; /* Content above falling hearts */
-		max-width: 1200px;
+		max-width: 1400px;
 		margin: 0 auto;
-		padding: 4rem 2rem;
+		padding: 4rem 1rem;
+		padding-top: 7rem;
 		text-align: center;
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		flex-direction: column;
+		flex-direction: row;
+		column-gap: 4vw;
+		.hero_content_text {
+			display: flex;
+			flex-direction: column;
+			gap: 16px;
+		}
 
-		@media (max-width: 767px) {
+		@media (max-width: 768px) {
 			padding: 2rem 1rem;
+		}
 
-			h1 {
-				font-size: 2rem;
-			}
-
-			p {
-				font-size: 1rem;
-			}
-
-			.imagesWrapper {
-				flex-direction: column;
-				gap: 1rem;
-			}
+		.hero_content_dear {
+			font-size: 1.4em;
 		}
 		h1 {
-			font-size: 3rem;
-			line-height: 1.2;
-			margin-bottom: 1.5rem;
+			font-size: 5rem;
+			@media screen and (max-width: 768px) {
+				font-size: 2em;
+			}
 			span {
 				color: $button-bg-color; /* Example color for date */
 			}
 		}
-
-		p {
-			font-size: 1.2rem;
-			margin-bottom: 2rem;
+		h2 {
+			font-weight: normal;
+			font-size: 1.6em;
+			line-height: 120%;
 		}
 
-		.imagesWrapper {
+		.images_wrapper {
 			display: inline-flex;
-			gap: 2rem;
+			@media screen and (max-width: 768px) {
+				flex-direction: column;
+			}
 
 			.childPhoto {
 				position: relative;
-				height: 400px; /* Matches next/image widths */
+				height: 600px;
 				width: auto;
 			}
 		}
 		.city {
 			font-size: 2em;
+			@media screen and (max-width: 1200px) {
+				padding-top: 50px;
+			}
+		}
+
+		.city,
+		h1 {
+			color: $pink-color;
 		}
 	}
 
 	/*************
      * FALLING HEARTS
      *************/
-	.fallingHearts {
+	.falling_hearts {
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -75,38 +85,122 @@
 		height: 100%;
 		z-index: 5; /* Between background and content */
 
-		/* Example: generate multiple hearts using nth-child or placeholders. */
-		.heart {
-			position: absolute;
-			top: -10%; /* Start slightly above hero section */
-			width: 30px;
-			height: 30px;
-			background: url(../../img/heart.svg) center / contain no-repeat;
-			animation: fall 8s linear infinite;
-			opacity: 0.8;
+		.snowflake {
+			color: #fff;
+			font-size: 1em;
+			text-shadow: 0 0 1px #000;
+		}
 
-			/* Random positions for variety */
-			&:nth-child(1) {
-				left: 10%;
-				animation-delay: 0s;
+		@-webkit-keyframes snowflakes-fall {
+			0% {
+				top: -10%;
 			}
-			&:nth-child(2) {
-				left: 30%;
-				animation-delay: 1s;
+			100% {
+				top: 100%;
 			}
-			&:nth-child(3) {
-				left: 50%;
-				animation-delay: 2s;
+		}
+		@-webkit-keyframes snowflakes-shake {
+			0% {
+				-webkit-transform: translateX(0px);
+				transform: translateX(0px);
 			}
-			&:nth-child(4) {
-				left: 70%;
-				animation-delay: 3s;
+			50% {
+				-webkit-transform: translateX(80px);
+				transform: translateX(80px);
 			}
-			&:nth-child(5) {
-				left: 90%;
-				animation-delay: 4s;
+			100% {
+				-webkit-transform: translateX(0px);
+				transform: translateX(0px);
 			}
-			/* ... add more hearts or random logic with nth-child */
+		}
+		@keyframes snowflakes-fall {
+			0% {
+				top: -10%;
+			}
+			100% {
+				top: 100%;
+			}
+		}
+		@keyframes snowflakes-shake {
+			0% {
+				transform: translateX(0px);
+			}
+			50% {
+				transform: translateX(80px);
+			}
+			100% {
+				transform: translateX(0px);
+			}
+		}
+		.snowflake {
+			position: absolute;
+			top: -10%;
+			z-index: 9999;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
+			cursor: default;
+			-webkit-animation-name: snowflakes-fall, snowflakes-shake;
+			-webkit-animation-duration: 10s, 3s;
+			-webkit-animation-timing-function: linear, ease-in-out;
+			-webkit-animation-iteration-count: infinite, infinite;
+			-webkit-animation-play-state: running, running;
+			animation-name: snowflakes-fall, snowflakes-shake;
+			animation-duration: 10s, 3s;
+			animation-timing-function: linear, ease-in-out;
+			animation-iteration-count: infinite, infinite;
+			animation-play-state: running, running;
+		}
+		.snowflake:nth-of-type(0) {
+			left: 1%;
+			-webkit-animation-delay: 0s, 0s;
+			animation-delay: 0s, 0s;
+		}
+		.snowflake:nth-of-type(1) {
+			left: 10%;
+			-webkit-animation-delay: 1s, 1s;
+			animation-delay: 1s, 1s;
+		}
+		.snowflake:nth-of-type(2) {
+			left: 20%;
+			-webkit-animation-delay: 6s, 0.5s;
+			animation-delay: 6s, 0.5s;
+		}
+		.snowflake:nth-of-type(3) {
+			left: 30%;
+			-webkit-animation-delay: 4s, 2s;
+			animation-delay: 4s, 2s;
+		}
+		.snowflake:nth-of-type(4) {
+			left: 40%;
+			-webkit-animation-delay: 2s, 2s;
+			animation-delay: 2s, 2s;
+		}
+		.snowflake:nth-of-type(5) {
+			left: 50%;
+			-webkit-animation-delay: 8s, 3s;
+			animation-delay: 8s, 3s;
+		}
+		.snowflake:nth-of-type(6) {
+			left: 60%;
+			-webkit-animation-delay: 6s, 2s;
+			animation-delay: 6s, 2s;
+		}
+		.snowflake:nth-of-type(7) {
+			left: 70%;
+			-webkit-animation-delay: 2.5s, 1s;
+			animation-delay: 2.5s, 1s;
+		}
+		.snowflake:nth-of-type(8) {
+			left: 80%;
+			-webkit-animation-delay: 1s, 0s;
+			animation-delay: 1s, 0s;
+		}
+		.snowflake:nth-of-type(9) {
+			left: 90%;
+			-webkit-animation-delay: 3s, 1.5s;
+			animation-delay: 3s, 1.5s;
 		}
 	}
 
@@ -123,3 +217,7 @@
      * MEDIA QUERIES - Mobile
      ****************************/
 }
+body {
+	background: white;
+}
+/* customizable snowflake styling */
