--- a/client/react-app/styles/common/header.scss
+++ b/client/react-app/styles/common/header.scss
@@ -6,10 +6,9 @@
 	z-index: 1000;
 	width: 100vw;
 	transition: all 0.8s ease;
-	background: linear-gradient(0deg, #f7f3f4, #f7f3f4),
-		linear-gradient(0deg, #febd2f, #febd2f),
-		radial-gradient(178.57% 327.71% at 110.1% 3.35%, #ff605b 0%, #ffee30 100%),
-		#27d07d;
+	font-size: 0.7em;
+	background-color: $bg-color-pink;
+
 	@media (max-width: 500px) {
 		width: 100vw;
 		padding: 0px 4vw;
