додав в анімацію з падаючих сердець в херо секшн

--- a/client/react-app/styles/_variables.scss
+++ b/client/react-app/styles/_variables.scss
@@ -4,6 +4,7 @@ $fBold: CarloMelowSans, sans-serif;
 
 // Colors
 $primary-color: #3a865b;
+$primary-color-hover: #276542;
 $pink-color: #ff9aff;
 $cOrange: #e74c3c;
 $cWhite: white;
